Absolute URLs fix; ignore <noscript> meta refreshes